added new project + rewrote experience, resume changes.

--- a/experience.html
+++ b/experience.html
@@ -31,30 +31,27 @@
                         <img src="static/assets/showcase.png">
                     </div>
                     <p>Technologies I have been experiencing here:</p>
-                    <ul class="tech-list"><li>Ruby on Rails</li><li>Docker</li><li>Github Actions</li><li>Rspec</li><li>Cypress</li><li>Redis</li><li>RESTful APIs</li><li>MinIO</li><li>RubyGem</li><li>Kanban</li><li>Git</li><li>Bootstrap</li><li>Bash</li><li>JavaScript</li><li>HTML</li><li>SCSS</li></ul>
+                    <ul class="tech-list"><li>Ruby on Rails</li><li>Docker</li><li>Github Actions</li><li>Bootstrap</li><li>JavaScript</li><li>HTML</li><li>SCSS</li><li>Rspec</li><li>Cypress</li><li>Redis</li><li>RESTful APIs</li><li>MinIO</li><li>RubyGem</li><li>Kanban</li><li>Git</li><li>Bash</li></ul>
                 </div>
                 <div class="right-side">
                     <h3>Software Engineering Intern @</h3>
                     <a href="https://www.rentwayhome.com/" target="_blank" rel="noopener noreferrer"><h2>Wayhome Services Co.</h2></a>
-                    <h4>August 2023 - Present</h4>
+                    <h4>August - December 2023</h4>
                     <div class="text">
                         <li>
-                            Developed features including mobile responsiveness, geolocation, administrative functionality, and fixed over 50 bugs all throughout the application.
+                            Overhauled rental listing and applications process incorporating new mobile responsive designs, rental screenings via 3rd party API, geolocation search, managed state machines of objects, and fixed over 150 bugs.
                         </li>
                         <li>
-                            Used AASM Ruby State Machines to manage internal states within objects.
+                            Migrated from local to S3 storage to facilitate scalability.
                         </li>
                         <li>
-                            Built S3 storage buckets with MinIO to facilitate scalability.
+                            Implemented a GitHub Actions-based CI/CD system with diverse workflows for efficient build and deploy processes.
                         </li>
                         <li>
-                            Employed several GHA workflows that automate the process of the build & release of the product.
+                            Upgraded application from Rails 6 to 7.
                         </li>
                         <li>
-                            Engineered a comprehensive RubyGem API wrapper with over 30 easily interfaceable methods and classes for an external service used within the app, Tazworks API, made to screen tenants and property partners.
-                        </li>
-                        <li>
-                            Seamlessly integrated unit tests using RSpec for the backend & Cypress for the front-end to improve operational efficiency by over 50%
+                            Seamlessly integrated Rspec and Cypress testing to ensure critical features do not break, improving operational efficiency by over 50%.
                         </li>
                         <li>
                             Collaborated with a cross-functional team to address technical issues and responsible for the implementation of significant UX overhauls across the entire application, resulting in a 30% increase in user satisfaction.
